Populated Projects and previous work, fixed a few alignment issues and box size issues.

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ section {
 
 .class-div {
   width: 40%;
-  height: 500px;
+  height: 400px;
   border: 1px solid;
   border-radius: 2%;
   background-color: var(--white);
@@ -109,7 +109,7 @@ section {
 
 .skills-div {
   width: 40%;
-  height: 500px;
+  height: 400px;
   border: 1px solid;
   border-radius: 2%;
   background-color: var(--white);
@@ -124,33 +124,6 @@ section {
 }
 
 /* projects */
-
-.projects-div {
-  display: flex;
-  flex-direction: column;
-}
-
-.project1-div {
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  height: 500px;
-  border: 1px solid;
-  border-radius: 2%;
-  background-color: var(--white);
-}
-
-.project2-div {
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
-  height: 500px;
-  border: 1px solid;
-  border-radius: 2%;
-  background-color: var(--white);
-}
 
 /* form */
 
